@@ -1,3 +1,9 @@
+2004-09-02  Christian Ruppert <arc@users.sf.net>
+	* uwm/init.c, uwm/uwm.c: moved TheScreen.errout initialisation code
+	  from InitUWM to an earlier point in main.
+	* uwm/special.c(CheckCPP): fixed broken pipe error in case we don't
+	  find a preprocessor binary to execute.
+
 2004-08-09  Christian Ruppert <arc@users.sf.net>
 	* uwm/init.c: removed exit() statements that were introduced for
 	  debugging of the config file parsing system.
